samples/_failures_safe/1761340125_f2602e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39f0284d.c: In function ‘main’:
./samples/SAFE/__tmp_39f0284d.c:187:9: error: expected declaration or statement at end of input
  187 |         } else {
      |         ^
./samples/SAFE/__tmp_39f0284d.c:187:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_39f0284d.c:187:9: error: expected declaration or statement at end of input
